smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/with-on-next-line-union.smithy
// Parse error at line 7, column 5 near `with`: Expected: '{', but found 'w'
$version: "2.0"

namespace smithy.example

union MixedUnion
    with [MixinUnion] {}

@mixin
union MixinUnion {}
